--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,18 @@
             <version>RELEASE</version>
             <scope>compile</scope>
         </dependency>
+        <!--httpClient apache-->
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.9</version>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.8.2</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
