--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+server.port=8899
+myselfname="LiSi"
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost:3306/codingeveryday?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
